# test_interview_effective_mobile

./: .gitignore  README.md  cli.py  data.json  exceptions.py  main.py  pyproject.toml  test_.py
