[tool.poetry]
name = "juniors-interview-effective-mobile"
version = "0.1.0"
description = "for pass test interview"
authors = ["Aleksandr Ryabinskij <olexander.rabota@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
mypy = "^1.13.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
e